--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,6 @@
         </plugins>
     </build>
 
-    <properties>
-        <hibernate-version>5.0.1.Final</hibernate-version>
-    </properties>
-
     <dependencies>
 
         <!--driver for connection to PostgreSQL database -->
@@ -38,7 +34,14 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>${hibernate-version}</version>
+            <version>5.0.1.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>jaxws-rt</artifactId>
+            <version>2.3.2</version>
+            <type>pom</type>
         </dependency>
 
     </dependencies>
