--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>5.0.1.Final</version>
+            <version>5.3.7.Final</version>
         </dependency>
 
         <dependency>
@@ -42,6 +42,12 @@
             <artifactId>jaxws-rt</artifactId>
             <version>2.3.2</version>
             <type>pom</type>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <version>1.2</version>
         </dependency>
 
     </dependencies>
